# FlightTrackr

./: Cargo.toml  README.md  flights.json  log4rs.yaml
handle-errors/src/: lib.rs
src/: main.rs
src/routes/: analysis.rs
src/types/: airport_code.rs  flight.rs  flights.rs  mod.rs
