[package]
name = "rust_take_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framwork utils
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
# serialization and stuff
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handle-errors = { path = "handle-errors", version = "0.1.0" }
log = "0.4.17"
log4rs = "1.1.1"
